ajustes de API e controller
